<resources>
    <string name="app_name">吉祥宝金融</string>
    
    <!--首页底部按钮-->
    <string name="choice">精选</string>
    <string name="financing">理财</string>
    <string name="loan">借款</string>
    <string name="mine">我的</string>

    <string name="more">更多</string>
    <!--注册或登陆 -->
    <string name="login_title">注册或登陆</string>
    <!--理财-->
    <!--优选理财-->
    <string name="financing_preferred">优选理财</string>
    <string name="financing_list_item_title">title</string>
    <string name="financing_list_item_text">text</string>
    <string name="financing_list_item_content">content</string>
    <string name="financing_list_item_text_1">预期年化</string>
    <string name="financing_list_item_content_1">0.0</string>
    <string name="financing_list_item_content_1_percent">%</string>
    <string name="financing_list_item_text_2">期限</string>
    <string name="financing_list_item_content_2">0</string>
    <string name="financing_list_item_content_2_day">天</string>
    <string name="credit_list">债权列表</string>
    <string name="transfer_zone">转让专区</string>
    <string name="no_internet">网络异常</string>
    <string name="xin_list_title">新手专享</string>
    <string name="tender_amount">招标金额：</string>
    <string name="wan">万</string>
    <string name="month">个月</string>
    <string name="day">天</string>
    <string name="example_list_title">体验专区</string>
    <string name="example_list_text">体验标</string>
    <string name="san_list_title">散标专区</string>
    <string name="buy">抢购</string>
    <string name="sell_out">售罄</string>
    <string name="test" />
</resources>
