<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:top_menu="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter_gray"
    android:orientation="vertical">

    <com.lenso.jixiangbao.view.TopMenuBar
        android:id="@+id/top_menu_bar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        top_menu:background="@android:color/holo_blue_dark"
        top_menu:menuSrc="@mipmap/ic_launcher"
        top_menu:text="@string/financing"
        top_menu:textSize="@dimen/menu_title_size">

    </com.lenso.jixiangbao.view.TopMenuBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_menu_preferred_finance"
            style="@style/financing_menu_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/financing_preferred" />
        <TextView
            android:id="@+id/tv_menu_credit_list"
            style="@style/financing_menu_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/credit_list" />
        <TextView
            android:id="@+id/tv_menu_transfer_zone"
            style="@style/financing_menu_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/transfer_zone" />
    </LinearLayout>
    <com.lenso.jixiangbao.view.JViewPager
        android:id="@+id/jvp_finance"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </com.lenso.jixiangbao.view.JViewPager>
</LinearLayout>